--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "financejs": "^4.1.0",
     "firebase": "^5.9.3",
+    "firebaseui": "^3.5.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
