--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
+    "tar": "^4.4.8",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.26",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
