--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
+  "engines": {
+    "node": "10.15.3"
+  },  
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
