--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "engines": {
     "node": "10.15.3"
-  },  
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "express": "^4.16.4",
     "financejs": "^4.1.0",
     "firebase": "^5.9.3",
     "firebaseui": "^3.5.2",
