--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "express": "^4.16.4",
     "financejs": "^4.1.0",
